# Kickstarter-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  make_synthetic_data.py  pyproject.toml  requirements.txt  run_00_diagnose.py  run_01_frame.py  run_02_sample.py  run_03_probe.py  run_04_collect.py  run_05_analysis.py  run_06_content.py  verification_agreement.py
.github/workflows/: ci.yml
ksai/: __init__.py  analysis.py  charts.py  config.py  disclosures.py  extract.py  frame.py  matching.py  sampling.py  scrape.py  synthetic.py  verify.py  webrobots.py
results/: README.md  inclusion_experience.csv  inclusion_region.csv  matching_balance.csv  outcomes_matched.csv  outcomes_overall.csv  prevalence_by_category.csv  prevalence_by_quarter.csv
results/content/: dictionary.csv  outcomes_by_output_type.csv  output_type_by_experience.csv  output_type_by_region.csv  output_type_distribution.csv  term_tool_frequency.csv  verification_report.csv
tests/: conftest.py  test_analysis.py  test_config.py  test_disclosures.py  test_extract.py  test_frame.py  test_integration.py  test_matching.py  test_sampling.py  test_scrape.py  test_verify.py
